fixed spacing for .type

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,6 +50,8 @@ aside {
 }
 
 section.type{
+    flex-direction: column;
+    justify-content: center;
     background: darkcyan;
      background: $sectionBackground;
     width: 800px;
@@ -67,7 +69,7 @@ section.type{
     }
     h3 {
         margin: 0 0 10px 0;
-        padding-top: 280px;
+        // padding-top: 280px;
         color: $mainOrange;
     }
 }
@@ -95,6 +97,7 @@ select {
     font-size: 16px;
     padding-left: 10px;  
     width: 268px;
+    outline: none;
 }
 
 section.restaurants {
